// Vitest Snapshot v1

exports[`components > N8NCallout > content > should pass props to text component correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_a6gr6_1 _warning_a6gr6_16\\" bold=\\"true\\" align=\\"center\\" tag=\\"p\\">
  <div class=\\"_icon_a6gr6_34\\">
    <n8n-icon-stub icon=\\"exclamation-triangle\\" size=\\"large\\" bold=\\"true\\" align=\\"center\\" tag=\\"p\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub bold=\\"true\\" size=\\"small\\" align=\\"center\\" tag=\\"p\\"><span>This is a callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > content > should render custom HTML content correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_a6gr6_1 _custom_a6gr6_10\\">
  <div class=\\"_icon_a6gr6_34\\">
    <n8n-icon-stub icon=\\"code\\" size=\\"large\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\"><span>This is an HTML callout. <a href=\\"#\\" target=\\"_blank\\"><b>Read more</b></a></span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render custom theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_a6gr6_1 _custom_a6gr6_10\\">
  <div class=\\"_icon_a6gr6_34\\">
    <n8n-icon-stub icon=\\"code\\" size=\\"large\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\"><span>This is an custom callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render danger theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_a6gr6_1 _danger_a6gr6_28\\">
  <div class=\\"_icon_a6gr6_34\\">
    <n8n-icon-stub icon=\\"times-circle\\" size=\\"large\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\"><span>This is an danger callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render info theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_a6gr6_1 _info_a6gr6_10\\">
  <div class=\\"_icon_a6gr6_34\\">
    <n8n-icon-stub icon=\\"info-circle\\" size=\\"large\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\"><span>This is an info callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render success theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_a6gr6_1 _success_a6gr6_22\\">
  <div class=\\"_icon_a6gr6_34\\">
    <n8n-icon-stub icon=\\"check-circle\\" size=\\"large\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\"><span>This is an success callout.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8NCallout > props > should render warning theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"_callout_a6gr6_1 _warning_a6gr6_16\\">
  <div class=\\"_icon_a6gr6_34\\">
    <n8n-icon-stub icon=\\"exclamation-triangle\\" size=\\"large\\"></n8n-icon-stub>
  </div>
  <div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\"><span>This is an warning callout.</span></n8n-text-stub>
  </div>
</div>"
`;
